source/postcard-dyn/src/snapshots/postcard_dyn__de__test__insta_Enum1.snap
---
source: source/postcard-dyn/src/de.rs
expression: "Enum1 :: SCHEMA"
---
NamedType {
    name: "Enum1",
    ty: Enum(
        [
            NamedVariant {
                name: "Alpha",
                ty: UnitVariant,
            },
            NamedVariant {
                name: "Beta",
                ty: NewtypeVariant(
                    NamedType {
                        name: "u8",
                        ty: U8,
                    },
                ),
            },
            NamedVariant {
                name: "Gamma",
                ty: NewtypeVariant(
                    NamedType {
                        name: "Vec<T>",
                        ty: Seq(
                            NamedType {
                                name: "u8",
                                ty: U8,
                            },
                        ),
                    },
                ),
            },
            NamedVariant {
                name: "Delta",
                ty: NewtypeVariant(
                    NamedType {
                        name: "Struct1",
                        ty: Struct(
                            [
                                NamedValue {
                                    name: "x",
                                    ty: NamedType {
                                        name: "bool",
                                        ty: Bool,
                                    },
                                },
                                NamedValue {
                                    name: "y",
                                    ty: NamedType {
                                        name: "u16",
                                        ty: U16,
                                    },
                                },
                                NamedValue {
                                    name: "z",
                                    ty: NamedType {
                                        name: "f64",
                                        ty: F64,
                                    },
                                },
                            ],
                        ),
                    },
                ),
            },
            NamedVariant {
                name: "Epsilon",
                ty: TupleVariant(
                    [
                        NamedType {
                            name: "u8",
                            ty: U8,
                        },
                        NamedType {
                            name: "bool",
                            ty: Bool,
                        },
                    ],
                ),
            },
        ],
    ),
}
