source/postcard-dyn/src/snapshots/postcard_dyn__de__test__insta_TupStruct1.snap
---
source: source/postcard-dyn/src/de.rs
expression: "TupStruct1 :: SCHEMA"
---
NamedType {
    name: "TupStruct1",
    ty: NewtypeStruct(
        NamedType {
            name: "u8",
            ty: U8,
        },
    ),
}
