source/postcard-dyn/src/snapshots/postcard_dyn__de__test__insta_UnitStruct.snap
---
source: source/postcard-dyn/src/de.rs
expression: "UnitStruct :: SCHEMA"
---
NamedType {
    name: "UnitStruct",
    ty: UnitStruct,
}
